# pCloud-file-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: backup_directory.py
src/pcloud_client/: __init__.py  auth.py  cli.py  client.py  errors.py
tests/: test_pcloud_client.py
