[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "pcloud-python-client-test"
version = "0.1.0"
description = "A small, typed Python client for the pCloud HTTP JSON API."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "ikeda042" }
]
keywords = ["pcloud", "cloud-storage", "backup", "oauth2", "client"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: System :: Archiving :: Backup",
]
dependencies = [
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
pcloud-client = "pcloud_client.cli:main"

[project.urls]
Homepage = "https://github.com/ikeda042/pCloud-python-client-test"
Issues = "https://github.com/ikeda042/pCloud-python-client-test/issues"
Documentation = "https://github.com/ikeda042/pCloud-python-client-test#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/pcloud_client"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
