[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "pcloud-python-client-test"
version = "0.1.0"
description = "A small, typed Python client and CLI for the pCloud HTTP JSON API — built for backup automation."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "ikeda042" }
]
keywords = [
  "pcloud",
  "cloud-storage",
  "backup",
  "oauth2",
  "client",
  "cli",
  "automation",
  "sync",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: System :: Archiving :: Backup",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
pcloud-client = "pcloud_client.cli:main"

[project.urls]
Homepage = "https://github.com/ikeda042/pCloud-file-client"
Repository = "https://github.com/ikeda042/pCloud-file-client"
Issues = "https://github.com/ikeda042/pCloud-file-client/issues"
Changelog = "https://github.com/ikeda042/pCloud-file-client/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ikeda042/pCloud-file-client#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/pcloud_client"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
